v<0.3.3>, <08/03/2023> -- Added time complexity to benchmark
v<0.3.4>, <09/01/2023> -- FrechetMean hot fix for karch
v<0.3.4>, <09/01/2023> -- Refactored test args
v<0.3.4>, <09/05/2023> -- Added HDBSCAN to clust
v<0.3.4>, <09/06/2023> -- Added RANK for OD ranking
v<0.3.4>, <09/07/2023> -- Added Rankings to docs
v<0.3.4>, <09/08/2023> -- Updated GNBC model for meta
v<0.3.5>, <10/29/2023> -- Upgraded RANK and docs
v<0.3.5>, <11/02/2023> -- Added CONF for OD confidence
v<0.3.5>, <11/05/2023> -- Added CONF docs and updated FAQ
v<0.3.6>, <01/29/2024> -- Added mixmod thresholder
v<0.3.6>, <01/29/2024> -- Updated benchmarks
v<0.3.6>, <02/03/2024> -- Revised benchmark notebook
v<0.3.7>, <02/08/2024> -- Python 3.12 support
v<0.3.7>, <08/07/2024> -- Added PDF to Readthedocs
v<0.3.7>, <08/09/2024> -- Removed Geomstats dependency from KARCH
v<0.3.7>, <08/18/2024> -- Fixed Zscore implementation
v<0.3.7>, <08/18/2024> -- Added faster KDE and CDF generation using upsampling
v<0.3.7>, <08/18/2024> -- Added fast KDE and CDF test case
v<0.3.7>, <08/18/2024> -- Fixed muli-peak error in FWFM
v<0.3.7>, <08/18/2024> -- Updated time complexity benchmarks
v<0.3.8>, <11/21/2024> -- Added factor arg to MAD and ZSCORE, contribution by @MalikAly
v<0.3.8>, <12/15/2024> -- Removed matplotlib as core dependency
v<1.0.0>, <12/19/2024> -- Fixed low contamination issue in RANK
v<1.0.0>, <01/27/2025> -- Added numpy random seed to all thresholders
v<1.0.0>, <01/27/2025> -- Added `fit` and `predict` methods to all thresholders
v<1.0.0>, <01/27/2025> -- Aligned MTT alpha arg with standard value
v<1.0.0>, <01/27/2025> -- Aligned all thresholders to be sklearn compatible
v<1.0.0>, <01/27/2025> -- Added new example notebooks
v<1.0.0>, <01/27/2025> -- Updated all thresholder tests
v<1.0.0>, <01/27/2025> -- Updated all thresholder examples
v<1.0.0>, <01/27/2025> -- Updated docs with shift to V1
v<1.0.0>, <01/27/2025> -- Updated docs with datatables
v<1.0.1>, <06/14/2025> -- Updated max thresholder limit