@@ -97,3 +97,5 @@ v<1.0.0>, <01/27/2025> -- Updated all thresholder examples
 v<1.0.0>, <01/27/2025> -- Updated docs with shift to V1
 v<1.0.0>, <01/27/2025> -- Updated docs with datatables
 v<1.0.1>, <06/14/2025> -- Updated max thresholder limit
+v<1.0.1>, <08/10/2025> -- Fixed test scores min max range
+v<1.0.1>, <08/10/2025> -- Updated tests with random state and better test scores coverage
